@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Gaspard Bucher"]
-  s.date = %q{2011-06-16}
+  s.date = %q{2011-06-23}
   s.default_executable = %q{zena}
   s.description = %q{zena is a Ruby on Rails  CMS (content managment system) with a focus on usability, ease of customization and web 2.0 goodness (application like behaviour).}
   s.email = %q{gaspard@teti.ch}
@@ -354,6 +354,7 @@ Gem::Specification.new do |s|
     "bricks/zena/zena/migrate/02_zerox1_schema.rb",
     "bricks/zena/zena/migrate/03_zerox1_data.rb",
     "bricks/zena/zena/migrate/20110315161158_add_reverse_scope_to_roles.rb",
+    "bricks/zena/zena/migrate/20110623072048_fix_cached_path_index.rb",
     "config/boot.rb",
     "config/bricks.yml",
     "config/database_example.yml",
